--- a/pages/15269.html
+++ b/pages/15269.html
@@ -424,20 +424,40 @@ margin-left: 0em;
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
-<li><a href='#classical_mckay_correspondence'>Classical McKay correspondence</a></li>
+<li><a href='#idea'>Idea</a></li>
 <ul>
 <li><a href='#construction'>Construction</a></li>
 <li><a href='#interpretation_in_ktheory'>Interpretation in K-theory</a></li>
 </ul>
-<li><a href='#derived_mckay_correspondence'>Derived McKay correspondence</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
 
-<h2 id="classical_mckay_correspondence">Classical McKay correspondence</h2>
+<h2 id="idea">Idea</h2>
 
-<p>The classical McKay correspondence, named after John McKay, is a one-to-one correspondence between the <span class="newWikiWord">McKay graphs<a href="/nlab/new/McKay+graphs">?</a></span> of finite subgroups <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>⊂</mo><msub><mtext>SL</mtext> <mn>2</mn></msub><mo stretchy="false">(</mo><mi>ℂ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G \subset \text{SL}_2(\mathbb{C})</annotation></semantics></math> and the extended Dynkin diagrams of ADE type.</p>
+<p>Generally, the <em>McKay correspondence</em> concerns identifications between <a class="existingWikiWord" href="/nlab/show/linear+representations">linear representations</a> of <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SU%282%29">finite subgroups of SU(2)</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>⊂</mo><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G \subset SU(2)</annotation></semantics></math> with <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> of the <a class="existingWikiWord" href="/nlab/show/blow-up">blow-up</a> <a class="existingWikiWord" href="/nlab/show/resolution+of+singularities">resolution</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mi>X</mi><mo stretchy="false">˜</mo></mover></mrow><annotation encoding="application/x-tex">\tilde X</annotation></semantics></math> of the corresponding <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>⫽</mo><mi>G</mi><mo>≔</mo><msup><mi>ℂ</mi> <mn>2</mn></msup><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">X \sslash G \coloneqq \mathbb{C}^2\sslash G</annotation></semantics></math>.</p>
+
+<p>A strong version of the correspondence is obtained when the <a class="existingWikiWord" href="/nlab/show/cohomology+theory">cohomology theory</a> is taken to be (<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a> (<a href="#GSV83">Gonzalez-Sprinberg &amp; Verdier 83</a>):</p>
+
+<p>Here the McKay correspondence becomes an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> from the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> (equivalently the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> R(G)) to the plain <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a> of the resolution <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mi>X</mi><mo stretchy="false">˜</mo></mover></mrow><annotation encoding="application/x-tex">\tilde X</annotation></semantics></math>, given by <a class="existingWikiWord" href="/nlab/show/integral+transform">integral transform</a> (<a class="existingWikiWord" href="/nlab/show/Fourier-Mukai+transform">Fourier-Mukai transform</a>) through the canonical <a class="existingWikiWord" href="/nlab/show/span">span</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mi>K</mi><mo stretchy="false">(</mo><mi>X</mi><msub><mo>×</mo> <mrow><mi>X</mi><mo stretchy="false">/</mo><mi>G</mi></mrow></msub><mover><mi>S</mi><mo stretchy="false">˜</mo></mover><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><msup><mrow></mrow> <mpadded width="0" lspace="-100%width"><mrow><msubsup><mi>p</mi> <mn>1</mn> <mo>*</mo></msubsup></mrow></mpadded></msup><mo>↗</mo></mtd> <mtd></mtd> <mtd><msup><mo>↘</mo> <mpadded width="0"><mrow><mi>Inv</mi><mo>∘</mo><mo stretchy="false">(</mo><msub><mi>p</mi> <mn>2</mn></msub><msub><mo stretchy="false">)</mo> <mo>*</mo></msub></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mtd> <mtd><mo>≃</mo></mtd> <mtd><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mtd> <mtd></mtd> <mtd><mover><mo>⟶</mo><mo>≃</mo></mover></mtd> <mtd></mtd> <mtd><mi>K</mi><mo stretchy="false">(</mo><mover><mi>X</mi><mo stretchy="false">˜</mo></mover><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+     &amp;&amp;
+     &amp;&amp; K( X \times_{X/G} \tilde S )
+     \\
+     &amp;&amp; 
+     &amp; {}^{\mathllap{ p_1^\ast }}\nearrow &amp;&amp; \searrow^{\mathrlap{Inv \circ (p_2)_\ast}}
+     \\
+     R(G) \simeq K_G(\ast) &amp;\simeq&amp; K_G(X) &amp;&amp; \overset{\simeq}{\longrightarrow}  &amp;&amp; K(\tilde X)
+  }
+
+</annotation></semantics></math></div>
+<p>In terms of <a class="existingWikiWord" href="/nlab/show/physics">physics</a> (<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>), the <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a> classes appearing here may be interpreted as <a class="existingWikiWord" href="/nlab/show/groups">groups</a> of <a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional</a> <a class="existingWikiWord" href="/nlab/show/D-brane+charges">D-brane charges</a> (see at <em><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a></em>). In terms of the <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> <a class="existingWikiWord" href="/nlab/show/gauge+field+theory">gauge field theory</a> on the D-branes the McKayc correspondence is then seen as passage from the <a class="existingWikiWord" href="/nlab/show/Higgs+branch">Higgs branch</a> to the <a class="existingWikiWord" href="/nlab/show/Coulomb+branch">Coulomb branch</a>.</p>
+
+<p>The proof of these statemens generally proceeds by relating both sides of the equivalence to <a class="existingWikiWord" href="/nlab/show/Dynkin+diagrams">Dynkin diagrams</a> of <a class="existingWikiWord" href="/nlab/show/ADE-classification">ADE-type</a>.</p>
+
+<p>The classical McKay correspondence, named after <a class="existingWikiWord" href="/nlab/show/John+McKay">John McKay</a>, is a one-to-one correspondence between the <span class="newWikiWord">McKay graphs<a href="/nlab/new/McKay+graphs">?</a></span> of <a class="existingWikiWord" href="/nlab/show/finite+group">finite</a> <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>⊂</mo><msub><mtext>SL</mtext> <mn>2</mn></msub><mo stretchy="false">(</mo><mi>ℂ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G \subset \text{SL}_2(\mathbb{C})</annotation></semantics></math> and the extended Dynkin diagrams of ADE type.</p>
 
 <h3 id="construction">Construction</h3>
 
@@ -447,13 +467,7 @@ margin-left: 0em;
 
 <h3 id="interpretation_in_ktheory">Interpretation in K-theory</h3>
 
-<p>In (<a href="#GSZ">GSZ</a>) the McKay correspondence is interpreted as an isomorphism on <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a>, based on the observation that the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is equal to the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{C}^2</annotation></semantics></math>. This is isomorphic to the ordinary K-theory of the minimal resolution of the Kleinian singularity, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbb{C}^2\sslash G</annotation></semantics></math>.</p>
-
-<h2 id="derived_mckay_correspondence">Derived McKay correspondence</h2>
-
-<p>Due to T. Bridgeland, A. King, and M. Reid.</p>
-
-<p>(…)</p>
+<p>In (<a href="#GSV83">Gonzalez-Sprinberg &amp; Verdier 83</a>) the McKay correspondence is interpreted as an isomorphism on <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a>, based on the observation that the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is equal to the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{C}^2</annotation></semantics></math>. This is isomorphic to the ordinary K-theory of the minimal resolution of the Kleinian singularity, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbb{C}^2\sslash G</annotation></semantics></math>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -488,8 +502,8 @@ margin-left: 0em;
 <p>As anisomorphism between <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of the resolution and <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a>:</p>
 
 <ul>
-<li id="GSZ">
-<p>G. Gonzalez-Sprinberg, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, Construction géométrique de la correspondance de McKay, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</p>
+<li id="GSV85">
+<p><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, Construction géométrique de la correspondance de McKay, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</p>
 </li>
 
 <li>
@@ -502,14 +516,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 21, 2018 at 14:59:55.
+  Last revised on September 22, 2018 at 04:30:55.
   See the <a href="https://ncatlab.org/nlab/history/McKay correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/McKay correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
