--- a/pages/16965.html
+++ b/pages/16965.html
@@ -502,7 +502,24 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#statement">Statement</a><ul><li><a href="#OfFixedPointSpectraOfEquivariantSuspensionSpectra">Of fixed point spectra of equivariant suspension spectra</a></li><li><a href="#for_equivariant_homotopy_groups">For equivariant homotopy groups</a></li><li><a href="#for_rational_equivariant_homotopy_theory">For rational equivariant homotopy theory</a></li></ul></li><li><a href="#examples">Examples</a><ul><li><a href="#ForTheEquivariantSphereSpectrum">For the equivariant sphere spectrum</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#statement'>Statement</a></li>
+<ul>
+<li><a href='#OfFixedPointSpectraOfEquivariantSuspensionSpectra'>Of fixed point spectra of equivariant suspension spectra</a></li>
+<li><a href='#for_equivariant_homotopy_groups'>For equivariant homotopy groups</a></li>
+<li><a href='#for_rational_equivariant_homotopy_theory'>For rational equivariant homotopy theory</a></li>
+</ul>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#ForTheEquivariantSphereSpectrum'>For the equivariant sphere spectrum</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The objects of <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> – genuine <a class="existingWikiWord" href="/nlab/show/G-spectra">G-spectra</a> – are very rich: Already the <a class="existingWikiWord" href="/nlab/show/fixed+point+spectra">fixed point spectra</a> of <a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectra">equivariant suspension spectra</a> contain considerably more information than just the <a class="existingWikiWord" href="/nlab/show/suspension+spectra">suspension spectra</a> of the plain underlying <a class="existingWikiWord" href="/nlab/show/fixed+point+spaces">fixed point spaces</a> – the latter are just the <em><a class="existingWikiWord" href="/nlab/show/geometric+fixed+point+spectra">geometric fixed point spectra</a>.</em></p>
@@ -574,7 +591,7 @@ margin-left: 0em;
 <h3 id="for_equivariant_homotopy_groups">For equivariant homotopy groups</h3>
 
 <p>It follows that for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> a pointed <a class="existingWikiWord" href="/nlab/show/topological+G-space">topological G-space</a>, its <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+groups">equivariant homotopy groups</a> are</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><msubsup><mi>π</mi> <mo>•</mo> <mi>G</mi></msubsup><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mi>X</mi><mo stretchy="false">)</mo></mtd> <mtd><mo>≃</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></munder><msubsup><mi>π</mi> <mo>•</mo> <mrow><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi></mrow></msubsup><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><msub><mo stretchy="false">)</mo> <mo>+</mo></msub><mo>∧</mo><msup><mi>X</mi> <mi>H</mi></msup><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><msup><mi>X</mi> <mi>G</mi></msup><mo stretchy="false">)</mo><mo>⊕</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mfrac linethickness="0"><mrow><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></mrow><mrow><mrow><mi>H</mi><mo>≠</mo><mi>G</mi></mrow></mrow></mfrac></munder><msubsup><mi>π</mi> <mo>•</mo> <mrow><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi></mrow></msubsup><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><msub><mo stretchy="false">)</mo> <mo>+</mo></msub><mo>∧</mo><msup><mi>X</mi> <mi>H</mi></msup><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><msubsup><mi>π</mi> <mo>•</mo> <mi>G</mi></msubsup><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mi>X</mi><mo stretchy="false">)</mo></mtd> <mtd><mo>≃</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></munder><msubsup><mi>π</mi> <mo>•</mo> <mrow><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi></mrow></msubsup><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><msub><mo stretchy="false">)</mo> <mo>+</mo></msub><mo>∧</mo><msup><mi>X</mi> <mi>H</mi></msup><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><msup><mi>X</mi> <mi>G</mi></msup><mo stretchy="false">)</mo><mo>⊕</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mfrac linethickness="0"><mrow><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></mrow><mrow><mrow><mn>1</mn><mo>≠</mo><mi>H</mi><mo>≠</mo><mi>G</mi></mrow></mrow></mfrac></munder><msubsup><mi>π</mi> <mo>•</mo> <mrow><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi></mrow></msubsup><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><msub><mo stretchy="false">)</mo> <mo>+</mo></msub><mo>∧</mo><msup><mi>X</mi> <mi>H</mi></msup><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>⊕</mo><msubsup><mi>π</mi> <mo>•</mo> <mi>G</mi></msubsup><mo stretchy="false">(</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><msub><mi>G</mi> <mo>+</mo></msub><mo>∧</mo><mi>X</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
   \begin{aligned}
     \pi_\bullet^G(\Sigma^\infty X)
     &amp; 
@@ -585,8 +602,10 @@ margin-left: 0em;
     &amp;\simeq
     \pi_\bullet(\Sigma^\infty X^G)
     \oplus
-    \underset{{[H \subset G]} \atop {H \neq G}}{\bigoplus}
+    \underset{{[H \subset G]} \atop {1 \neq H \neq G}}{\bigoplus}
     \pi_\bullet^{W_G H}(\Sigma^\infty (E (W_G H)_+ \wedge X^H))
+    \oplus
+    \pi_\bullet^{G}(\Sigma^\infty (E G_+ \wedge X))
   \end{aligned}
 
 </annotation></semantics></math></div>
@@ -675,14 +694,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 05:42:42.
+  Last revised on September 22, 2018 at 04:56:40.
   See the <a href="https://ncatlab.org/nlab/history/tom Dieck splitting" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/tom Dieck splitting/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
